# moli

./: CLAUDE.md  Cargo.toml  README.md  install.sh
src/: main.rs
src/cli/command/: add.rs  claude_skill.rs  completion.rs  load.rs  mod.rs  new.rs  rm.rs  scan.rs  shared.rs  sync.rs  up.rs
src/code_generation/core/: directory_builder.rs  file_builder.rs
src/code_generation/language/any/: file_handler.rs
src/code_generation/language/go/: package_generator.rs
src/code_generation/language/javascript/: module_generator.rs
src/code_generation/language/python/: package_generator.rs
src/code_generation/language/rust/: module_generator.rs
src/code_generation/language/typescript/: module_generator.rs
src/project_management/config/: filesystem_scanner.rs  mod.rs  models.rs  path_collector.rs  validator.rs  yaml_modifier.rs
src/shared/utils/: diff.rs  mod.rs  yaml_formatter.rs
