[package]
name = "moli"
version = "2.3.0"
edition = "2021"

[[bin]]
name = "moli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
clap_complete = "4.4.3"
anyhow = "1.0.79"
askama = "0.12.1"
inquire = "0.6.2"
regex = "1.10.2"
yaml-rust = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ignore = "0.4"

[dev-dependencies]
tempfile = "3.0"
